# Alexa_W

./: .gitignore  =0.9.4  GITHUB_SETUP.md  README.md  WARP.md  main.py  manage_services.py  pyproject.toml  requirements.txt  run.sh  test_logger_console.py  test_running_logger.py
common/: __init__.py  base_service.py  config_loader.py  gpu_monitor.py  health_client.py  logger_client.py  vram_logger.py
config/: Modelfile  config.ini
docs/: PROJECT_STATUS.md  QUICK_START.md  WARP.md  dialog_spec.md  loader_spec.md  logger_spec.md  spec.md  tasks.md
models/: README.md
proto/: __init__.py  services.proto  services_pb2.py  services_pb2_grpc.py
services/: kwd_service.py  llm_service.py  loader_service.py  logger_service.py  stt_service.py  tts_service.py
services/kwd/: kwd_service.py
tests/: base_test.py  test_1_kwd_interactive.py  test_2_stt_interactive.py  test_3_llm_interactive.py  test_3_llm_interactive_with_loader.py  test_4_tts_interactive.py  test_all_vram.py  test_e2e.py  test_full_chain.py  test_kwd.py  test_kwd_tts_integration.py  test_llm.py  test_llm_actual.py  test_llm_debug.py  test_llm_llama31.py  test_llm_simple.py  test_llm_vram.py  test_loader.py  test_loader_tts_response.py  test_loader_vram_sequence.py  test_ollama_vram.py  test_stt.py  test_stt_interactive.py  test_tts.py  test_tts_speak.py
tests/services/: test_all_services.py  test_kwd.py  test_llm.py  test_logger.py  test_stt.py  test_tts.py
